test/tests/errors/error-class-no-this-in-decs.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        var x: int = 1;
        var y: int = this.x;
    }
}